# mejdi

./: CMakeLists.txt  skuska.md
mejdi_2/: CMakeLists.txt  RodneCislo.cpp  RodneCislo.h  main.cpp
mejdi_8/: CMakeLists.txt  main.cpp
mejdi_rodne_cislo/: CMakeLists.txt  RodneCislo.cpp  RodneCislo.h  main.cpp
mejdi_sort/: CMakeLists.txt  cpp_sort.cpp  main.cpp
skuska_1/: CMakeLists.txt  main.cpp
skuska_2/: CMakeLists.txt  Source.cpp  main.cpp  studenti.txt
skuska_3/: CMakeLists.txt  main.cpp
zadanie_1/: CMakeLists.txt  main.cpp
zadanie_10_a_11/: CMakeLists.txt  Item.cpp  Item.h  List.cpp  List.h  Student.cpp  Student.h  main.cpp  prvaci.txt
zadanie_12/: CMakeLists.txt  main.cpp
zadanie_2/: CMakeLists.txt  Fraction.cpp  Fraction.h  main.cpp
zadanie_3_a_4/: CMakeLists.txt  Employee.cpp  Employee.h  Person.cpp  Person.h  PersonalNumber.cpp  PersonalNumber.h  main.cpp
zadanie_5/: CMakeLists.txt  main.cpp
zadanie_6/: CMakeLists.txt  studenti.txt  zadanie_6.1.cpp  zadanie_6.3.cpp
zadanie_7/: CMakeLists.txt  pacienti.txt  zadanie_7.1.cpp  zadanie_7.2.cpp  zadanie_7.3.cpp
zadanie_8/: CMakeLists.txt
zadanie_9/: CMakeLists.txt  Item.cpp  Item.h  List.cpp  List.h  main.cpp
zapocet/: CMakeLists.txt  main.cpp
