project(mejdi)
cmake_minimum_required(VERSION 3.15)

add_subdirectory(zadanie_1)
add_subdirectory(zadanie_2)
add_subdirectory(zadanie_3_a_4)
add_subdirectory(zadanie_5)
add_subdirectory(zadanie_6)
add_subdirectory(zadanie_7)
add_subdirectory(zadanie_8)
add_subdirectory(zadanie_9)
add_subdirectory(zadanie_10_a_11)
add_subdirectory(zadanie_12)

add_subdirectory(zapocet)

add_subdirectory(skuska_1)
add_subdirectory(skuska_2)
add_subdirectory(skuska_3)
